# port-scanner

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
port_scanner/: scanner.py
tests/: test_scanner.py
